<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/name"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/breedGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bredForCell"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:text="@string/bred_for"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/bredFor"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/breedGroupCell"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:text="@string/breed_group"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/breedGroup"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/heightCell"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:text="@string/height"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weightCell"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:text="@string/weight"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lifeSpanCell"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:text="@string/lifespan"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/lifeSpan"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temperamentCell"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:text="@string/temperament"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/temperament"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/like"
        android:src="@drawable/baseline_favorite_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>