<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/itemLikeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/like"
        android:focusable="true"
        android:rotation="7"
        android:rotationX="17"
        android:rotationY="-20"
        android:visibility="invisible"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/baseline_favorite_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/itemDislikeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/dislike"
        android:focusable="true"
        android:rotation="7"
        android:rotationX="17"
        android:rotationY="-20"
        android:visibility="invisible"
        app:backgroundTint="@color/dark_salmon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/baseline_favorite_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
